# ml-general-stock-predictions

./: .gitignore  Makefile  README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: githhub-action-release.yml  github-action-cd.yml  github-action-ci.yml  github-action-release.yml  github-action-scrape-cd.yml  testing.yml
docs/: DB_OVERVIEW.drawio  GSP_EER.drawio
gsp/: .env_template  .gitignore  pyproject.toml
gsp/data/: __init__.py
gsp/data/output/: test_history_log.csv
gsp/data/setup/: stocks_setup.json
gsp/gsp/: NOTES.md  __init__.py  run.py
gsp/gsp/algorithms/: eda.py  model.py
gsp/gsp/model/: eda.ipynb  model.ipynb  model_v2.ipynb  run.ipynb  run_v2.ipynb  utils.py
gsp/gsp/mongodb/: crud.py  mongodb.py  run.py  setup.py  stock_ref_mapping.py  storage_collections.py  storage_helper.py  storage_helper_protocol.py  transformation.py
gsp/gsp/mongodb/models/: document.py  generation.py  history.py  prediction.py  stock.py
gsp/gsp/publisher/: publish.py  run.py  transform.py
gsp/gsp/scraper/: download.py  run.py
gsp/gsp/utils/: column_transformer_wrapper.py  container.py  date_utils.py  group_shifts.py  load_env.py  model_utils.py  notebook_utils.py  utils.py
gsp/lib/logger/: setup.py
gsp/tests/: data_paths_test.py  date_manipulation_test.py  scraper_task_test.py  setup_stock_json_test.py
gsp/tests/test_model/: model_test.py
gsp/tests/test_mongodb/: transformation_test.py
gsp/tests/test_scraper/: scraper_task_test.py
gsp/tests/test_utils/: column_transformer_wrapper_test.py  date_manipulation_test.py  group_shifts_test.py  load_env_test.py  notebook_utils_test.py
nsp/: Makefile  README.md  pyproject.toml
nsp/data/: NVDA.csv  __init__.py  events_corporate.csv  events_presentation.csv  stocks_history.csv
nsp/nsp/eda/: README.md  eda.ipynb
nsp/nsp/scraper/: README.md  run.py  utils.py
nsp/nsp/scraper/js/: events_corporate.js  events_corporate_investors.js  events_presentation.js  events_presentations.js
specs/: generation.json  history.json  prediction.json  stock.json
