[tool.poetry]
name = "gsp"
version = "0.2.0"
description = ""
authors = ["Damian Trafialek <damian.trafialek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poethepoet = "^0.26.0"
flake8-pyproject = "^1.2.3"
requests = "^2.31.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.poe.tasks]
scrape = "python -m gsp.scraper.run"
lint = "flake8 ."
fmt = "black ."
fmt-check = "black --check ."
typecheck = "mypy ."
test = "pytest -v ./tests"
test-dev = "pytest ./tests -v -m dev"
test-cov = "pytest ./tests -v --cov=gsp"

[tool.flake8]
max-complexity = 10
ignore = "E501,W503,W504"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "import-untyped"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
